@@ -948,11 +948,13 @@ Creates a maximum height in order to enter a room.  Similar to Prop_Crawlspace.
 PROP_TRASHCAN=\
 Property   : Prop_Trashcan\n\r\
 Targets    : Room, Container Item\n\r\
-Parameters : \n\r\
+Parameters : (DELAY=[#TICKS])\n\r\
 Example    : \n\r\
+Example    : DELAY=4\n\r\
 Description: \n\r\
-Causes all items dropped, or placed in the host container to be immediately \
-destroyed and to cease to exist.
+Causes all items dropped, or placed in the host container to be  \
+destroyed and to cease to exist.  If a delay parameter is used, the destruction of \
+the items in the can will not occur until that time has passed.
 
 PROP_SPARRINGROOM=\
 Property   : Prop_SparringRoom\n\r\
